Style + sections order

--- a/css/main.css
+++ b/css/main.css
@@ -111,7 +111,7 @@ a {
     }
 }
 
-.site-header {
+.green-separator {
     border-top: 5px solid #5f805f;
     border-bottom: 1px solid #afebaf;
     min-height: 56px;
