--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,3 +1,4 @@
+<div class="green-separator"></div>
 <div id="disqus_thread"></div>
 <script type="text/javascript">
     /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
